--- a/front1/src/App.css
+++ b/front1/src/App.css
@@ -34,36 +34,51 @@
   background-image: linear-gradient(111.84deg, #38A087 35.69%, rgba(160, 56, 69, 0.65) 68.55%);
   /* background-image: linear-gradient(180deg, red, yellow); */
 /* mix-blend-mode: normal; */
-  opacity: 80%;
+  opacity: 100%;
 }
-.D1{
-  float: right;
+.A1{
+  position: fixed;
+  width: 100%;
+  list-style: none;
+  display:flex;
+  background-color: rgb(29, 43, 39);
+  color: antiquewhite;
+  margin: 0;
+  opacity: 100%;
+  padding: 1%;
 }
-.D3{
-  float: right;
-
+.btn1{
+  color:rgb(220, 245, 231);
+  outline: none;
+}
+.btn ul li a{
+  color: red;
 }
 .D2{
-  float: right;
+ /* padding: 1%; */
+ margin: auto;
+};
+.dropdown {
   position: relative;
-  
+  display: inline-block;
 }
+
 .P1{
   height: 600px;
   width: 100%;
   /* background-image: linear-gradient(111.84deg, #38A087 35.69%, rgba(63, 26, 4, 0.75) 68.55%); */
-  background-image: url("https://images.unsplash.com/photo-1668231778943-08955dfc3afc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+  /* background-image: url("https://images.unsplash.com/photo-1668231778943-08955dfc3afc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"); */
   background-repeat: no-repeat;
   background-size: cover;
   align-items: center;
   /* display: grid; */
   border: 3px;
   border-style: double;
-  border-color: blue;
+  border-color: rgb(111, 28, 142);
   
 }
 .cout1{
-  color: white;
+  color: rgb(192, 27, 27);
   padding: 15px 10px;
 }
 .cout{
