--- a/front1/src/App.css
+++ b/front1/src/App.css
@@ -1,51 +1,29 @@
- /* .App {
-  text-align: center;
+
+body{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #2262e2;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
-
-/* .container-fluid{
-  background-color:rgb(32, 97, 75);
-  font-style: italic;
-  color: aliceblue;
-} */
-
-
-.container-fluid{
-  /* background-color: rgb(22, 10, 243); */
-  background-image: linear-gradient(111.84deg, #38A087 35.69%, rgba(160, 56, 69, 0.65) 68.55%);
-  /* background-image: linear-gradient(180deg, red, yellow); */
-/* mix-blend-mode: normal; */
-  opacity: 100%;
+button{
+ background-color: crimson;
+ color:rgb(166, 232, 10)
 }
 .A1{
   position: fixed;
   width: 100%;
   list-style: none;
   display:flex;
-  background-color: rgb(29, 43, 39);
+  background-color: rgb(7, 7, 7);
   color: antiquewhite;
-  margin: 0;
   opacity: 100%;
   padding: 1%;
+  margin-left: auto;
+  display: flex;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.A1 li{
+  margin-left: auto;
+  /* background-color: rgb(31, 30, 28); */
+  /* padding: 1px 1px 0px 1px; */
+  border-radius: 3px;
 }
 .btn1{
   color:rgb(220, 245, 231);
@@ -54,27 +32,32 @@
 .btn ul li a{
   color: red;
 }
-.D2{
+/* .D2{
  /* padding: 1%; */
- margin: auto;
-};
+ /* margin: auto;
+}; */ */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
 .P1{
-  height: 600px;
+  height: 120%;
   width: 100%;
-  /* background-image: linear-gradient(111.84deg, #38A087 35.69%, rgba(63, 26, 4, 0.75) 68.55%); */
-  /* background-image: url("https://images.unsplash.com/photo-1668231778943-08955dfc3afc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"); */
+  background-image: url(./images/mountain1.jpg);
+  /* background-image: url("https://images.unsplash.com/photo-1477346611705-65d1883cee1e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"); */
   background-repeat: no-repeat;
   background-size: cover;
-  align-items: center;
-  /* display: grid; */
-  border: 3px;
-  border-style: double;
-  border-color: rgb(111, 28, 142);
+  border: 2px;
+  border-style:groove;
+  /* border-color: rgb(5, 103, 24); */
+  display: grid;
+  gap: 20px;
+  grid-template-rows: 6fr   ;
+  grid-template-columns: 2fr 2f ;
+  /* background-color: #38A087; */
+ padding-top: 6%;
+ 
   
 }
 .cout1{
@@ -82,7 +65,8 @@
   padding: 15px 10px;
 }
 .cout{
-  color: white;
+  /* color: white; */
+  color: rgb(175, 227, 175);
   padding: 15px 10px;
 }
 .I1{
@@ -92,25 +76,30 @@
   padding-right: 50px;
 }
 
-/* form{
-  padding-left: 10%;
-  padding-right: 10%;
-} */
+
 .M1{
-  padding: 10%;
-  padding-top: 5%;
-  height: 60%;
-  width: 60%;
-  /* border-color: rgb(166, 232, 10);
+  padding: 1% 5% 10% 2%;
+  /* padding-top: 5%; */
+  height: 80%;
+  width: 100%;
+  /* border-color: rgb(166, 232, 10); */
   border-width: 3px;
-  border-style: double; */
-  margin: 2% 20%;
-  
- 
+  border-radius: 20px;
 }
-h1{
+.P1 h1{
   padding-left: 30%;
+  margin-top: 7%;
+  color: antiquewhite;
 }
-.N1{
-  background-color: rgb(15, 171, 171);
+.P3{
+  background-color: rgb(21, 22, 22);
+  color: antiquewhite;
+  border: 2px;
+  border-style:groove;
+}
+.B2 ul{
+  list-style: none;
+}
+.B3 ul{
+  list-style: none;
 }
